ui platform bug on mobile fixed

--- a/src/App.css
+++ b/src/App.css
@@ -223,6 +223,7 @@ nav a {
 
 .platforms img {
   width: 100%;
+  position: relative;
   height: 110px;
 }
 
